# aeris-promptshield

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  SKILL.md  skill.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
api/: package-lock.json  package.json  tsconfig.json  wrangler.toml
api/src/: worker.ts
content/blog/: container-isolation-not-enough-2026-02-09.md  securing-agentic-workflows-2026-02-09.md
docs/: ALTERNATIVES.md  BENCHMARKS.md  FAQ.md  INTEGRATIONS.md  QUICKSTART.md  SECURITY_DEMO.md
drafts/: hn-ai-easy-hard-security-2026-02-09.md  hn-github-agentic-2026-02-09.md  hn-nanoclaw-swarms-2026-02-09.md  hn-openclaw-changing-life-2026-02-09.md  hn-slack-cli-agents-2026-02-09.md  hn-what-working-on-2026-02-09.md
examples/: attack-vectors.md  basic-scan.sh  scan_demo.py  typescript_demo.ts  use-cases.md
hooks/: beforeUserMessage.js
pending-workflows/: ci.yml  publish-python.yml
python/: LICENSE  README.md  pyproject.toml
python/aeris_promptshield/: __init__.py  patterns.py  scanner.py
python/tests/: test_scanner.py
typescript/: README.md  package-lock.json  package.json  tsconfig.json
typescript/src/: index.ts
